implemented Mentor Groups new user creation and validation